--- a/DemoPrototype/OperatorPage.xaml
+++ b/DemoPrototype/OperatorPage.xaml
@@ -203,16 +203,16 @@
                 <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="TRetActual" XBindingPath="ElapsedTime" YBindingPath="TRetActual" ItemsSource="{Binding power}"/>
                 <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="TRetForecasted" XBindingPath="ElapsedTime" YBindingPath="TRetForecasted" ItemsSource="{Binding power}"/>
                 <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="THotTank" XBindingPath="ElapsedTime" YBindingPath="THotTank" ItemsSource="{Binding power}"/>
-                <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="TColdTank"  XBindingPath="ElapsedTime" YBindingPath="TCoolTank"  ItemsSource="{Binding power}"/>
+                <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="TColdTank"  XBindingPath="ElapsedTime" YBindingPath="TColdTank"  ItemsSource="{Binding power}"/>
                 <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="THotBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"/>
                 <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="TMidBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferMid" ItemsSource="{Binding power}"/>
                 <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="TColdBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferCold" ItemsSource="{Binding power}"/>
                 <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="TRetValve"  XBindingPath="ElapsedTime" YBindingPath="TRetValve" ItemsSource="{Binding power}"/>
                 <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="THeaterOilOut"  XBindingPath="ElapsedTime" YBindingPath="THeaterOilOut" ItemsSource="{Binding power}"/>
-                <chart:StepLineSeries LegendIcon="Diamond" Label="ValveFeedHot"  XBindingPath="ElapsedTime" YBindingPath="ValveFeedHot" ItemsSource="{Binding power}"/>
-                <chart:StepLineSeries LegendIcon="Diamond" Label="ValveFeedCold"  XBindingPath="ElapsedTime" YBindingPath="ValveFeedCold" ItemsSource="{Binding power}"/>
-                <chart:StepLineSeries LegendIcon="Diamond" Label="ValveReturn"  XBindingPath="ElapsedTime" YBindingPath="ValveReturn" ItemsSource="{Binding power}"/>
-                <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="ValveCoolant"  XBindingPath="ElapsedTime" YBindingPath="ValveCoolant" ItemsSource="{Binding power}"/>
+                <chart:StepLineSeries LegendIcon="Circle" Label="ValveFeedHot"  XBindingPath="ElapsedTime" YBindingPath="ValveFeedHot" ItemsSource="{Binding power}"/>
+                <chart:StepLineSeries LegendIcon="Circle" Label="ValveFeedCold"  XBindingPath="ElapsedTime" YBindingPath="ValveFeedCold" ItemsSource="{Binding power}"/>
+                <chart:StepLineSeries LegendIcon="Circle" Label="ValveReturn"  XBindingPath="ElapsedTime" YBindingPath="ValveReturn" ItemsSource="{Binding power}"/>
+                <chart:StepLineSeries LegendIcon="Circle" Label="ValveCoolant"  XBindingPath="ElapsedTime" YBindingPath="ValveCoolant" ItemsSource="{Binding power}"/>
                 <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="PowerHeating"  XBindingPath="ElapsedTime" YBindingPath="PowerHeating" ItemsSource="{Binding power}"/>
 
             </chart:SfChart>
@@ -220,17 +220,17 @@
         <!-- overlay own text as labels for chart -->
             <StackPanel Orientation="Vertical" Grid.Row="11" Grid.RowSpan="6">
                 <TextBlock Margin="2,30,0,0" FontSize="8" Text="Unknown"></TextBlock>
-                <TextBlock Margin="2,10,0,0" Text="WOpenEnd" FontSize="8"></TextBlock>
-                <TextBlock Margin="2,10,0,0" Text="WEjectEnd" FontSize="8"></TextBlock>
-                <TextBlock Margin="2,10,0,0" Text="WEjectBegin" FontSize="8"></TextBlock>
-                <TextBlock Margin="2,10,0,0" Text="WOpenBegin" FontSize="8"></TextBlock>
-                <TextBlock Margin="2,10,0,0" Text="WCoolingEnd" FontSize="8"></TextBlock>
-                <TextBlock Margin="2,10,0,0" Text="WInjectionEnd" FontSize="8"></TextBlock>
-                <TextBlock Margin="2,10,0,0" Text="WInjectionBegin" FontSize="8"></TextBlock>
-                <TextBlock Margin="2,10,0,0" Text="WColdAtMEntry" FontSize="8"></TextBlock>
-                <TextBlock Margin="2,10,0,0" Text="WHotAtMEntry" FontSize="8"></TextBlock>
-                <TextBlock Margin="2,10,0,0" Text="Idle" FontSize="8"></TextBlock>
+                <TextBlock Margin="2,10,0,0" Text="OpenEnd" FontSize="8"></TextBlock>
+                <TextBlock Margin="2,10,0,0" Text="EjectEnd" FontSize="8"></TextBlock>
+                <TextBlock Margin="2,10,0,0" Text="EjectBegin" FontSize="8"></TextBlock>
+                <TextBlock Margin="2,10,0,0" Text="OpenBegin" FontSize="8"></TextBlock>
+                <TextBlock Margin="2,10,0,0" Text="CoolingEnd" FontSize="8"></TextBlock>
+                <TextBlock Margin="2,10,0,0" Text="InjectionEnd" FontSize="8"></TextBlock>
+                <TextBlock Margin="2,10,0,0" Text="InjectionBegin" FontSize="8"></TextBlock>
+                <TextBlock Margin="2,10,0,0" Text="ColdAtMEntry" FontSize="8"></TextBlock>
+                <TextBlock Margin="2,10,0,0" Text="HotAtMEntry" FontSize="8"></TextBlock>
                 <TextBlock Margin="2,10,0,0" Text="Initial" FontSize="8"></TextBlock>
+                <TextBlock Margin="2,10,0,0" Text="Idle" FontSize="8"></TextBlock>
             </StackPanel>
 
             <!-- state chart -->
