--- a/DemoPrototype/MaintenancePage.xaml
+++ b/DemoPrototype/MaintenancePage.xaml
@@ -24,8 +24,8 @@
             <ColumnDefinition Width="auto"></ColumnDefinition>
             <ColumnDefinition Width="auto"></ColumnDefinition>
             <ColumnDefinition Width="auto"></ColumnDefinition>
-            <ColumnDefinition Width="auto"></ColumnDefinition>
-            <ColumnDefinition Width="auto"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
             <!-- ColumnDefinition Width="*"></ -->
         </Grid.ColumnDefinitions>
 
@@ -281,7 +281,10 @@
 
             <sfgrid:SfDataGrid x:Name="LogGrid" Margin="20,30,0,0" ColumnSizer="Auto"
                                AllowSorting="True" AllowFiltering="True"
+                               Height="600" Width="500"
+                               HorizontalAlignment="Left"
                               ItemsSource="{Binding logMessages}">
+                
             </sfgrid:SfDataGrid>
 
             <StackPanel Margin="0,5,0,0" Orientation="Horizontal">
