--- a/DemoPrototype/MaintenancePage.xaml
+++ b/DemoPrototype/MaintenancePage.xaml
@@ -6,7 +6,6 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:sfgrid="using:Syncfusion.UI.Xaml.Grid"
-    xmlns:sfpager="using:Syncfusion.UI.Xaml.Controls.DataPager"
     mc:Ignorable="d">
 
     <Grid x:Name="MaintenanceGrid" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -25,8 +24,6 @@
             <ColumnDefinition Width="auto"></ColumnDefinition>
             <ColumnDefinition Width="auto"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <!-- ColumnDefinition Width="*"></ -->
         </Grid.ColumnDefinitions>
 
         <StackPanel Margin="10,10,0,0" Orientation="Vertical" Width="220" HorizontalAlignment="Left">
@@ -47,7 +44,6 @@
                 <TextBlock Width="110" VerticalAlignment="Center" Text="Coolant valve"></TextBlock>
                 <ToggleSwitch IsEnabled="False" Margin="5,0,0,0"></ToggleSwitch>
             </StackPanel>
-
             <TextBlock FontWeight="SemiBold" Margin="0,10,0,0" Text="Force pumps (On/Off)"></TextBlock>
             <StackPanel Orientation="Horizontal">
                 <TextBlock  Width="110"  VerticalAlignment="Center" Text="Pump hot"></TextBlock>
@@ -57,7 +53,6 @@
                 <TextBlock  Width="110" VerticalAlignment="Center" Text="Pump cold"></TextBlock>
                 <ToggleSwitch IsEnabled="False" Margin="5,0,0,0"></ToggleSwitch>
             </StackPanel>
-
             <TextBlock FontWeight="SemiBold" Margin="0,10,0,0" Text="Available heating bars (On/Off)"></TextBlock>
             <StackPanel Orientation="Horizontal">
                 <TextBlock  Width="110"  VerticalAlignment="Center" Text="Bar 1"></TextBlock>
@@ -91,16 +86,14 @@
                 <TextBlock  Width="110" VerticalAlignment="Center" Text="Bar 8"></TextBlock>
                 <ToggleSwitch IsEnabled="False" Margin="5,0,0,0"></ToggleSwitch>
             </StackPanel>
-
         </StackPanel>
 
-        <StackPanel Grid.Column="1" Margin='20,0,0,0'>
+        <StackPanel Grid.Column="1" Margin='10,10,0,0'>
             <TextBlock FontWeight="SemiBold" Text="Temperature (C) will work soon"></TextBlock>
             <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                 <TextBlock VerticalAlignment="Center" Width="140" Text="Hot tank"></TextBlock>
                 <TextBox IsEnabled="False" Text="100"></TextBox>
             </StackPanel>
-
             <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                 <TextBlock VerticalAlignment="Center" Width="140" Text="Cold tank"></TextBlock>
                 <TextBox IsEnabled="False" Text="100"></TextBox>
@@ -109,7 +102,6 @@
                 <TextBlock VerticalAlignment="Center" Width="140" Text="Return valve"></TextBlock>
                 <TextBox IsEnabled="False" Text="100"></TextBox>
             </StackPanel>
-            
             <TextBlock Margin="5,5,0,0" Text="Buffer tank"></TextBlock>
             <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                 <TextBlock VerticalAlignment="Center" Width="140" Text="Oil hot side"></TextBlock>
@@ -123,7 +115,6 @@
                 <TextBlock VerticalAlignment="Center" Width="140" Text="Oil cold side"></TextBlock>
                 <TextBox IsEnabled="False" Text="100"></TextBox>
             </StackPanel>
-
             <TextBlock Margin="5,5,0,0" Text="Heating cartridge"></TextBlock>
             <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                 <TextBlock VerticalAlignment="Center" Width="140" Text="Oil inlet"></TextBlock>
@@ -133,7 +124,6 @@
                 <TextBlock VerticalAlignment="Center" Width="140" Text="Oil outlet"></TextBlock>
                 <TextBox IsEnabled="False" Text="100"></TextBox>
             </StackPanel>
-
             <TextBlock Margin="5,5,0,0" Text="Heat exchanger cartridge"></TextBlock>
             <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                 <TextBlock VerticalAlignment="Center" Width="140" Text="Oil inlet"></TextBlock>
@@ -151,11 +141,9 @@
                 <TextBlock VerticalAlignment="Center" Width="140" Text="Coolant water outlet"></TextBlock>
                 <TextBox IsEnabled="False" Text="100"></TextBox>
             </StackPanel>
-
         </StackPanel>
 
-
-        <StackPanel Grid.Column="2" Margin='20,0,0,0'>
+        <StackPanel Grid.Column="2" Margin='10,10,0,0'>
             <TextBlock FontWeight="SemiBold" Text="Flow (lpm)"></TextBlock>
             <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                 <TextBlock VerticalAlignment="Center" Width="140" Text="Coolant water"></TextBlock>
@@ -165,7 +153,6 @@
                 <TextBlock VerticalAlignment="Center" Width="140" Text="Heat transfer oil"></TextBlock>
                 <TextBox IsEnabled="False" Text="55"></TextBox>
             </StackPanel>
-
             <TextBlock FontWeight="SemiBold" Text="Pressure (bar/psi)"></TextBlock>
             <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                 <TextBlock VerticalAlignment="Center" Width="140" Text="Hot pump output"></TextBlock>
@@ -230,18 +217,15 @@
                 <TextBlock VerticalAlignment="Center" Width="140" Text="Electric Phase L3"></TextBlock>
                 <ToggleSwitch IsEnabled="False" Margin="5,0,0,0"></ToggleSwitch>
             </StackPanel>
-
         </StackPanel>
 
 
-        <StackPanel Grid.Column="3" Grid.ColumnSpan="2">
-<!--
-            <sfgrid:SfDataGrid x:Name="LogGrid" AutoGenerateColumns="False"
-                               ItemsSource="{Binding logMessages}"
-                               Height='600' HeaderRowHeight="30" RowHeight="25" Width="500">
+        <StackPanel Grid.Column="3" Margin="5,10,0,5" >
 
-            
-                <sfgrid:SfDataGrid.HeaderStyle>
+            <sfgrid:SfDataGrid x:Name="LogGrid"  Height='800' HeaderRowHeight="30" RowHeight="25" AutoGenerateColumns="False"
+                               ItemsSource="{Binding logMessages}" >
+
+                <sfgrid:SfDataGrid.HeaderStyle >
                     <Style  TargetType="sfgrid:GridHeaderCellControl">
                         <Setter Property="Background" Value="LightGray" />
                         <Setter Property="FontSize" Value="14" />
@@ -249,43 +233,35 @@
                 </sfgrid:SfDataGrid.HeaderStyle>
 
                 <sfgrid:SfDataGrid.Columns>
-                    <sfgrid:GridTextColumn MappingName="time" Width="130" AllowSorting="False">
+
+                    <sfgrid:GridTextColumn MappingName="time" Width="100" AllowSorting="True" AllowFiltering="False">
                         <sfgrid:GridTextColumn.CellStyle>
                             <Style TargetType="sfgrid:GridCell">
                                 <Setter Property="FontSize" Value="12" />
-                            </Style>
-                        </sfgrid:GridTextColumn.CellStyle>
-                    </sfgrid:GridTextColumn>
-                        
-                    <sfgrid:GridTextColumn MappingName="message" AllowSorting="True"  Width="300" >
-                        <sfgrid:GridTextColumn.CellStyle>
-                            <Style TargetType="sfgrid:GridCell">
-                                <Setter Property="FontSize" Value="12" />
-                                <Setter Property="Background" Value="LightYellow" />
                             </Style>
                         </sfgrid:GridTextColumn.CellStyle>
                     </sfgrid:GridTextColumn>
 
-                    <sfgrid:GridNumericColumn MappingName="prio"  HeaderText="P" Width="70" AllowSorting="True">
+                    <sfgrid:GridNumericColumn MappingName="prio"  Width="70" AllowSorting="True" AllowFiltering="True">
                         <sfgrid:GridNumericColumn.CellStyle>
                             <Style TargetType="sfgrid:GridCell">
                                 <Setter Property="FontSize" Value="12" />
                             </Style>
                         </sfgrid:GridNumericColumn.CellStyle>
                     </sfgrid:GridNumericColumn>
-                </sfgrid:SfDataGrid.Columns>
 
-                        </sfgrid:SfDataGrid>
--->
-            <!-- sfpager:SfDataPager  x:Name="logpager" Source="{Binding logMessages}"/ -->
+                    <sfgrid:GridTextColumn MappingName="message" ColumnSizer="Star" AllowSorting="True" AllowFiltering="True">
+                        <sfgrid:GridTextColumn.CellStyle>
+                            <Style TargetType="sfgrid:GridCell">
+                                <Setter Property="FontSize" Value="12" />
+                            </Style>
+                        </sfgrid:GridTextColumn.CellStyle>
+                    </sfgrid:GridTextColumn>
 
-            <sfgrid:SfDataGrid x:Name="LogGrid" Margin="20,30,0,0" ColumnSizer="Auto"
-                               AllowSorting="True" AllowFiltering="True"
-                               Height="600" Width="500"
-                               HorizontalAlignment="Left"
-                              ItemsSource="{Binding logMessages}">
-                
+                 </sfgrid:SfDataGrid.Columns>
             </sfgrid:SfDataGrid>
+
+            <!-- sfgrid:SfDataGrid x:Name="LogGrid" Height="500" ColumnSizer="Star" AllowSorting="True" AllowFiltering="True" ItemsSource="{Binding logMessages}"/ -->
 
             <StackPanel Margin="0,5,0,0" Orientation="Horizontal">
                 <Button x:Name="exportButton" Width="150" Content="Export" Click="exportButton_Click"></Button>
